Final_Project/modules/aws_network/main.tf
# Step 1 - Define the provider
provider "aws" {
  region = "us-east-1"
}

# Data source for availability zones in us-east-1
data "aws_availability_zones" "available" {
  state = "available"
}

locals {
  default_tags = merge(
    var.default_tags,
    { "Env" = var.env }
  )
}

# Create a new VPC 
resource "aws_vpc" "main" {
  cidr_block       = var.vpc_cidr
  instance_tenancy = "default"
  tags = merge(
    local.default_tags, {
      Name = "Group1-${var.env}-vpc"
    }
  )
}


# Add provisioning of the public subnetin the default VPC
resource "aws_subnet" "public_subnet" {
  count             = length(var.aws_availability_zones)
  vpc_id            = aws_vpc.main.id
  availability_zone = var.aws_availability_zones[count.index]
  cidr_block        = "${cidrsubnet(var.vpc_cidr,6,count.index+3)}"
 // cidr_block        = var.public_cidr_blocks

  ##availability_zone = data.aws_availability_zones.available.names[count.index]
  tags = merge(
    local.default_tags, {
      Name = "Group1-${var.env}-public-subnet-${count.index}"
    }
  )
}

resource "aws_subnet" "private_subnet" {
  count             = length(var.aws_availability_zones)
  vpc_id            = aws_vpc.main.id
  availability_zone = var.aws_availability_zones[count.index]
  cidr_block        = "${cidrsubnet(var.vpc_cidr,8,count.index)}"
  ##availability_zone = data.aws_availability_zones.available.names[count.index]
  tags = merge(
    local.default_tags, {
      Name = "Group1-${var.env}-private-subnet-${count.index}"
    }
  )
}


## Creating Gateways ##

# Create Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = merge(local.default_tags,
    {
      "Name" = "Group1-${var.env}-igw"
    }
  )
}

# Nat gateway
resource "aws_eip" "nat_gateway" {
  vpc = true
}

resource "aws_nat_gateway" "nat_gateway" {
  allocation_id = aws_eip.nat_gateway.id
  subnet_id     = element(aws_subnet.public_subnet.*.id, 1)
  //availability_zone = var.aws_availability_zones[1]

  tags = merge(local.default_tags,
    {
      "Name" = "Group1-${var.env}-nat_gw"
    }
  )
}

## Route Tables creation

# Route table to route add default gateway pointing to Internet Gateway (IGW)
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = {
    Name = "Group1-${var.env}-route-public-route_table"
  }
}


## Private Route Table  ##
resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.nat_gateway.id
  }
    tags = {
      Name = "Group1-${var.env}-route-private-route_table"
    }
  }

## Associate route tables ##

# Associate subnets with the custom route table
resource "aws_route_table_association" "public_route_table_association" {
  count          = length(aws_subnet.public_subnet[*].id)
  route_table_id = aws_route_table.public_route_table.id
  subnet_id      = aws_subnet.public_subnet[count.index].id
  
}

resource "aws_route_table_association" "private_route_table_association" {
  count          = length(aws_subnet.private_subnet[*].id)
  route_table_id = aws_route_table.private_route_table.id
  subnet_id      = aws_subnet.private_subnet[count.index].id
}
